--- a/style.css
+++ b/style.css
@@ -2,5 +2,5 @@
  * Theme Name: Theme name
  * Description: Site Theme
  * Author: Francesco Selva
- * Version: 1.0a2 (18/10/2024, 11:44:05)
+ * Version: 1.0v4 (05/02/2025, 11:38:39)
 */
