--- a/dev/css/styles.css
+++ b/dev/css/styles.css
@@ -1,29 +1,28 @@
 /* Tailwind */
 @import "tailwindcss";
-@plugin "@tailwindcss/typography";
-@plugin "@tailwindcss/forms";
-
-/* Tailwind theme variables */
-@theme {
-    --color-verde: #609422;
-    --breakpoint-3xl: 112rem;
-}
-
-/* Tailwind utilities */
-@utility container {
-    margin-inline: auto;
-    padding-inline: 1.5rem;
-}
-
-/* BS5 */
-/* @import "./bs5/bs5"; */
 
 /* Base */
 @import "./base/custom";
 
+/* Tailwind theme variables */
+@theme {
+	--color-verde: #609422;
+	--breakpoint-3xl: 112rem;
+}
+
+/* Tailwind utilities */
+@utility container {
+	margin-inline: auto;
+	padding-inline: 1.5rem;
+}
+
+/* Tailwind plugins */
+@plugin "@tailwindcss/typography";
+@plugin "@tailwindcss/forms";
+
 /* Root */
 :root {
-    --font-icons: "Font Awesome 6 Pro";
-    --font-brands: "Font Awesome 6 Brands";
-    --plyr-color-main: var(--color-verde);
+	--font-icons: "Font Awesome 6 Pro";
+	--font-brands: "Font Awesome 6 Brands";
+	--plyr-color-main: var(--color-verde);
 }
