--- a/style.css
+++ b/style.css
@@ -2,5 +2,6 @@
  * Theme Name: Theme name
  * Description: Site Theme
  * Author: Francesco Selva
- * Version: 1.0v403 (25/02/2025, 18:48:39)
+ * Version: 1.0v404
+ * Release Date: 11/11/2025, 13:25:21
 */
